--- a/standard-integration/.env.example
+++ b/standard-integration/.env.example
@@ -1,5 +1,5 @@
 # Create an application to obtain credentials at
 # https://developer.paypal.com/dashboard/applications/sandbox
 
-CLIENT_ID="YOUR_CLIENT_ID_GOES_HERE"
-APP_SECRET="YOUR_SECRET_GOES_HERE"
+CLIENT_ID="Aa1SaOOLvmSy1E-Wa4rZ_L1Yz4hhKBXP-_HcGq-1tTIMKLwSJX7eGqHX8q0QowRZ72d0kPTrokAGOEuK"
+APP_SECRET="ECHUTDI2WYGgo5u-uL-sCP7yHTjR8DdWLmW0Da8atBrVuK5HR-UEcF2QHxwBsyFdZeeuoby-l4hSXnMo"
